2005-12-17  Tor Lillqvist  <tml@novell.com>

	* save-attachments.c (entry_changed): Use GLib API to manipulate
	pathname.

2005-05-16  Not Zed  <NotZed@Ximian.com>

	* save-attachments.c: moved e-error to e-util

2005-05-13  Rodney Dawes  <dobey@novell.com>

	* org-gnome-save-attachments.xml: Update for new menu layout

2005-05-12  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: setup built_sources/cleanfiles.

2005-05-06  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: 
	* org-gnome-save-attachments.eplug.xml: s/.in/.xml/ & i18n.

2005-02-24  Björn Torkelsson  <torkel@acc.umu.se>

	* org-gnome-save-attachments.eplug.in: Removed plugin from the
	name.
	Fixed description and added author

2005-02-07  Not Zed  <NotZed@Ximian.com>

	* save-attachments.c (save_part): fix the access() call test.

2005-01-04  Philip Van Hoof  <pvanhoof@gnome.org>

	* save-attachments.c: Use standard error messages

2004-12-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* save-attachments.c: Warning when overwriting file

2004-11-01  JP Rosevear  <jpr@novell.com>

	* Makefile.am: dist xml menu file

2004-11-01  JP Rosevear  <jpr@novell.com>

	* Makefile.am: dist .eplug.in file

2004-10-20  Not Zed  <NotZed@Ximian.com>

	* Imported save-attachments example plugin.
